criando classes utilitarias

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+    <div class="container even-colums">
+        <h1>TESTE 1</h1>
+        <h1>TESTE 2</h1>
+    </div>
 
 </body>
 
