--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             </nav>
         </div>
     </header>
+
+    <section id="hero">
+        <img src="assets/music-bars.svg" alt="">
+        <div class="container py-xl">
+            <h1 class="">Quem canta seus males espanta</h1>
+            <p>Cantar nunca foi tão fácil</p>
+
+            <div class="buttons flex items-center gap-1">
+                <a href="#pricing" aria-label="Ver planos" class="btn btn-md"></a>
+                <a href="#dowload" class="btn btn-md">Baixar agora</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
