--- a/index.html
+++ b/index.html
@@ -67,6 +67,124 @@
         </div>
 
     </section>
+    <section id="features">
+        <div class="cards grid container py-xl  gap-1">
+            <div class="card py-lg px-lg">
+                <img src="assets/icons/MagicWand.svg" alt="">
+                <h3>A maior biblioteca de músicas de Karaokê!</h3>
+                <p>Nossa IA remove a voz de qualquer música e a deixa pronta pra cantar, num passe de mágica!</p>
+            </div>
+
+            <div class="card py-lg px-lg">
+                <div>
+                    <img src="assets/icons/GameController.svg" alt="">
+                    <h3>Experiência gamificada</h3>
+                    <p>Sua performance é pontuada de acordo com nosso algoritmo ultra preciso. Desafie-se, ganhe
+                        reconhecimento e comemore sua evolução!</p>
+                </div>
+                <img class="desktop-only" src="assets/Tela 2.png" alt="">
+
+            </div>
+
+            <div class="card py-lg px-lg">
+                <div>
+                    <img src="assets/icons/MicrophoneStage.svg" alt="">
+                    <h3>Grave suas performances</h3>
+                    <p>Seja para compartilhar com os amigos ou para acompanhar sua evolução, nosso recurso de gravação
+                        de áudio e vídeo permite que você aproveite a experiência ao máximo! </p>
+                </div>
+
+
+            </div>
+
+            <div class="card py-lg px-lg">
+
+                <img class="desktop-only" src="assets/Tela 1.png" alt="">
+                <div>
+                    <img src="assets/icons/UsersThree.svg" alt="">
+                    <h3>Compartilhe com a comunidade</h3>
+                    <p>Compartilhe suas gravações com a comunidade, interaja e explore a performance vocal de outras
+                        pessoas no seu feed!</p>
+                </div>
+
+            </div>
+
+
+            <div class="card py-lg px-lg">
+
+
+                <div>
+                    <img src="assets/icons/MusicNotes.svg" alt="">
+                    <h3>Letras em tempo-real</h3>
+                    <p>Nunca perca o ritmo com as letras das músicas sincronizadas e exibidas em tempo real. Você também
+                        pode ativar a voz original da música para ajudar.</p>
+                </div>
+                <img class="desktop-only" src="assets/Tela 3.png" alt="">
+
+            </div>
+        </div>
+
+    </section>
+    <section id="pricing">
+        <div class="container py-xl">
+            <header>
+                <strong>Planos e Preços</strong>
+                <h2>Assine e tenha acesso ilimitado a todas as funcionalidades</h2>
+            </header>
+            <div class="cards even-colums items-center">
+                <div class="card py-lg px-lg">
+                    <h3>Básico</h3>
+                    <p>Baixe o app e comece a cantar agora mesmo!</p>
+                    <zin-pricing>
+                        Grátis
+                    </zin-pricing>
+                    <a href="#" class="btn btn-md" aria-label="Baixar Agora"></a>
+                    <div class="separator"></div>
+                    <ul role="list" class="grid gap-1">
+                        <li>Com anúncios</li>
+                        <li>Até 5 músicas por dia</li>
+                        <li>Cante apenas as músicas disponíveis no plano gratuito</li>
+                    </ul>
+                </div>
+                <div class="premium">
+                    <div class="card py-lg px-lg">
+                        <span>1 mês grátis</span>
+                        <h3>Premium</h3>
+                        <p>Ideal para quem já cansou de passar vergonha no Karaokê</p>
+                        <zin-pricing>
+                            R$ 24,90 <small>/mês</small>
+                        </zin-pricing>
+                        <a href="#" class="btn btn-md">Experimente de Graça</a>
+                        <div class="separator"></div>
+                        <ul role="list" class="grid gap-1">
+                            <li>Sem interrupção de anúncios</li>
+                            <li>Cante quantas músicas quiser</li>
+                            <li>Cante todas as músicas da biblioteca</li>
+
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="card py-lg px-lg">
+                    <h3>Família</h3>
+                    <p>Para aquelas famílias que adoram se reunir pra cantar</p>
+                    <zin-pricing>
+                        R$ 21,90 <small>/mês por pessoa</small>
+                    </zin-pricing>
+                    <a href="#" class="btn btn-md" aria-label="Assinar Agora"></a>
+                    <div class="separator"></div>
+                    <ul role="list" class="grid gap-1">
+                        <li>Sem interrupção de anúncios</li>
+                        <li>Cante quantas músicas quiser</li>
+                        <li>Cante todas as músicas da biblioteca</li>
+
+                    </ul>
+                    <small>Mínimo de 4 pessoas no plano família.</small>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
